syntax = "proto3";

option java_multiple_files = true;
option java_package = "tech.fhyx.platform.imsto";
option java_outer_classname = "ImageProto";

package impb;


// rpc service

service ImageSvc {
	// Fetch
	rpc Fetch(FetchInput) returns (ImageOutput) {}
	// Store
	rpc Store(ImageInput) returns (ImageOutput) {}
}

message FetchInput {
	string apiKey = 1;
	string uri = 2;      // URI
	string referer = 3;  // referer for http request
	string roof = 4;     // section name
	int64 userID = 5;    // user ID
	string sizeOp = 6;   // size op
}

message ImageInput {
	string apiKey = 1;   // APIKey
	bytes image = 2;     // Image Binary
	string name = 3;     // Filename
	string roof = 4;     // section name
	int64 userID = 5;    // user ID
	int64 modified = 6;  // Last Modified
	string sizeOp = 7;   // size op
}

message ImageOutput {
	string path = 1;
	string uri = 2;
	uint64 ID = 3;
}
